Fix for overlaping table of contents list items.

--- a/style/wet-boew-moodle.css
+++ b/style/wet-boew-moodle.css
@@ -1549,6 +1549,10 @@ img.activityicon {
     text-align: left;
 }
 
+.path-mod-book .book_toc li {
+    flex-basis:auto
+}
+
 /* Separator between content and actiivty navigation. */
 
 .activity-navigation {
